--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "html-webpack-plugin": "^5.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
-    "vite-express": "*"
+    "vite-express": "*",
+    "webpack": "^5.88.1",
+    "webpack-cli": "^5.1.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
@@ -22,6 +25,7 @@
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.0.1",
     "nodemon": "^2.0.20",
-    "vite": "^4.0.4"
+    "vite": "^4.0.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
